plugins/kotlin/fir/tests/testData/kmp/highlighting/errorsInUnresolvedCode.kt
// PLATFORM: Common
// FILE: common.kt

fun common() {
    <error descr="[UNRESOLVED_REFERENCE] Unresolved reference 'unresolved'.">unresolved</error>
}

// PLATFORM: Jvm
// FILE: jvm.kt

fun jvm() {
    <error descr="[UNRESOLVED_REFERENCE] Unresolved reference 'unresolved'.">unresolved</error>
}

// PLATFORM: Js
// FILE: js.kt

fun js() {
    <error descr="[UNRESOLVED_REFERENCE] Unresolved reference 'unresolved'.">unresolved</error>
}

// PLATFORM: Native
// FILE: native.kt

fun native() {
    <error descr="[UNRESOLVED_REFERENCE] Unresolved reference 'unresolved'.">unresolved</error>
}

// PLATFORM: MinGW
// FILE: mingw.kt

fun mingw() {
    <error descr="[UNRESOLVED_REFERENCE] Unresolved reference 'unresolved'.">unresolved</error>
}

// PLATFORM: Linux
// FILE: linux.kt

fun linux() {
    <error descr="[UNRESOLVED_REFERENCE] Unresolved reference 'unresolved'.">unresolved</error>
}

// PLATFORM: LinuxX64
// FILE: linuxx64.kt

fun linuxX64() {
    <error descr="[UNRESOLVED_REFERENCE] Unresolved reference 'unresolved'.">unresolved</error>
}

// PLATFORM: LinuxArm64
// FILE: linuxarm64.kt

fun linuxArm64() {
    <error descr="[UNRESOLVED_REFERENCE] Unresolved reference 'unresolved'.">unresolved</error>
}
